@@ -1,18 +1,0 @@
-# $Id$
-# Public domain.
-# 
-# The mktex.cnf file, if it exists, can be used to tailor a setup to
-# local conditions.  If you use the mktex scripts, this file can contain
-# generic Bourne shell code.  However, the C (and other possible future)
-# implementations of the scripts do not handle anything beyond simple
-# assignment of variables, and so doing more is not recommended.
-#
-# To assign variables, use constructs like the examples below, which only
-# set unassigned variables.  The scripts may malfunction if you do
-# otherwise.
-#
-# Some examples of what you can use the mktex.cnf file for:
-# : ${MT_FEATURES=appendonlydir:varfonts}
-# : ${MODE=ljfour}
-# : ${BDPI=600}
-# : ${ps_to_pk=gsftopk}
