@@ -1,10 +1,18 @@
 2019-12-26  Karl Berry  <karl@tug.org>
 
+	* mktexdir,
+	* mktexnam,
+	* mktexupd,
 	* mktex.opt,
 	* mktexdir.opt,
 	* mktexnam.opt: remove; these will now be maintained
 	 (if changes are needed) only in Master/texmf-dist/web2c.
-	* Makefile.am (dist_web2c_DATA): remove.
+	* Makefile.am (dist_web2c_DATA, dist_web2c_SCRIPTS): remove.
+	(All this is primarily so that $Id$ expansions will not be lost;
+	the user-level mktex* scripts will happen in a few days.)
+	
+	* mktex.cnf: remove this unused file.
+	* Makefile.am (EXTRA_DIST): remove it here.
 
 2019-12-22  Karl Berry  <karl@freefriends.org>
 
